// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enable anti-tamper 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v2",
  },
  Object {
    "name": "Set git identity",
    "run": "git config user.name \\"Automation\\"
git config user.email \\"github-actions@github.com\\"",
  },
  Object {
    "name": "Anti-tamper check",
    "run": "git diff --ignore-space-at-eol --exit-code",
  },
  Object {
    "name": "Install dependencies",
    "run": "npm ci",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
  Object {
    "id": "git_diff",
    "name": "Check for changes",
    "run": "git diff --exit-code || echo \\"::set-output name=has_changes::true\\"",
  },
  Object {
    "if": "steps.git_diff.outputs.has_changes",
    "name": "Commit and push changes (if changed)",
    "run": "git add . && git commit -m \\"chore: self mutation\\" && git push origin HEAD:\${{ github.event.pull_request.head.ref }}",
  },
  Object {
    "env": Object {
      "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
    },
    "if": "steps.git_diff.outputs.has_changes",
    "name": "Update status check (if changed)",
    "run": "gh api -X POST /repos/\${{ github.event.pull_request.head.repo.full_name }}/check-runs -F name=\\"build\\" -F head_sha=\\"$(git rev-parse HEAD)\\" -F status=\\"completed\\" -F conclusion=\\"success\\"",
  },
  Object {
    "env": Object {
      "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
    },
    "if": "steps.git_diff.outputs.has_changes",
    "name": "Cancel workflow (if changed)",
    "run": "gh api -X POST /repos/\${{ github.event.pull_request.head.repo.full_name }}/actions/runs/\${{ github.run_id }}/cancel",
  },
  Object {
    "name": "Anti-tamper check",
    "run": "git diff --ignore-space-at-eol --exit-code",
  },
]
`;

exports[`mutableBuild will push changes to PR branches 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v2",
    "with": Object {
      "ref": "\${{ github.event.pull_request.head.ref }}",
      "repository": "\${{ github.event.pull_request.head.repo.full_name }}",
    },
  },
  Object {
    "name": "Set git identity",
    "run": "git config user.name \\"Automation\\"
git config user.email \\"github-actions@github.com\\"",
  },
  Object {
    "name": "Install dependencies",
    "run": "yarn install --check-files --frozen-lockfile",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
  Object {
    "id": "git_diff",
    "name": "Check for changes",
    "run": "git diff --exit-code || echo \\"::set-output name=has_changes::true\\"",
  },
  Object {
    "if": "steps.git_diff.outputs.has_changes",
    "name": "Commit and push changes (if changed)",
    "run": "git add . && git commit -m \\"chore: self mutation\\" && git push origin HEAD:\${{ github.event.pull_request.head.ref }}",
  },
  Object {
    "env": Object {
      "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
    },
    "if": "steps.git_diff.outputs.has_changes",
    "name": "Update status check (if changed)",
    "run": "gh api -X POST /repos/\${{ github.event.pull_request.head.repo.full_name }}/check-runs -F name=\\"build\\" -F head_sha=\\"$(git rev-parse HEAD)\\" -F status=\\"completed\\" -F conclusion=\\"success\\"",
  },
  Object {
    "env": Object {
      "GITHUB_TOKEN": "\${{ secrets.GITHUB_TOKEN }}",
    },
    "if": "steps.git_diff.outputs.has_changes",
    "name": "Cancel workflow (if changed)",
    "run": "gh api -X POST /repos/\${{ github.event.pull_request.head.repo.full_name }}/actions/runs/\${{ github.run_id }}/cancel",
  },
]
`;
